# ChangeLog for dev-perl/Finance-YahooQuote
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Finance-YahooQuote/ChangeLog,v 1.12 2006/07/10 15:46:18 agriffis Exp $

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  Finance-YahooQuote-0.21.ebuild:
  Mark 0.21 stable on ia64

  04 Jul 2006; Christian Hartmann <ian@gentoo.org>
  Finance-YahooQuote-0.20.ebuild, Finance-YahooQuote-0.21.ebuild:
  Fixed RDEPEND wrt bug #134781

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  Finance-YahooQuote-0.21.ebuild:
  Mark 0.21 ~ia64

  17 Feb 2006; Michael Hanselmann <hansmi@gentoo.org>
  Finance-YahooQuote-0.21.ebuild:
  Stable on ppc.

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org>
  Finance-YahooQuote-0.20.ebuild, Finance-YahooQuote-0.21.ebuild:
  Virtuals for perl-core

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  Finance-YahooQuote-0.21.ebuild:
  marking stable sparc x86

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  Finance-YahooQuote-0.21.ebuild:
  Marking stable x86

*Finance-YahooQuote-0.21 (26 Nov 2005)

  26 Nov 2005; Aaron Kulbe <superlag@gentoo.org>
  +Finance-YahooQuote-0.21.ebuild:
  Cleaning up outdated dev-perl ebuilds.  Version bump.

  21 Jul 2005; David Holm <dholm@gentoo.org> Finance-YahooQuote-0.20.ebuild:
  Added to ~ppc.

  20 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  Finance-YahooQuote-0.20.ebuild:
  Stable on sparc

  25 May 2005; Michael Cummings <mcummings@gentoo.org>
  Finance-YahooQuote-0.20.ebuild:
  dev-perl/MIME-Base64 => perl-core/MIME-Base64 migration

*Finance-YahooQuote-0.20 (07 Feb 2005)

  07 Feb 2005; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +Finance-YahooQuote-0.20.ebuild:
  New dep for app-misc/smsm. Also provides /usr/bin/yahooquote.
