@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Finance-YahooQuote/Finance-YahooQuote-0.20.ebuild,v 1.6 2006/07/04 08:46:33 ian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Finance-YahooQuote/Finance-YahooQuote-0.20.ebuild,v 1.7 2006/08/05 04:03:23 mcummings Exp $
 
 inherit perl-module
 
@@ -20,6 +20,8 @@ IUSE=""
 #SRC_TEST="do"
 
 DEPEND="dev-perl/libwww-perl
-		virtual/perl-MIME-Base64
-		dev-perl/HTML-Parser"
+	virtual/perl-MIME-Base64
+		dev-perl/HTML-Parser
+	dev-lang/perl"
 RDEPEND="${DEPEND}"
+
