@@ -1,1 +1,3 @@
 MD5 844d26ef02f16216840aac5815a6a6a7 finance-yahooquote_0.21.tar.gz 19162
+RMD160 fe4a5704279810df4618c648831ca2c53e4ed4eb finance-yahooquote_0.21.tar.gz 19162
+SHA256 bc91ac2d44e705870720b4a3ff73a66f7cddcc8ec64c4130c06cd33f465867d2 finance-yahooquote_0.21.tar.gz 19162
