@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Finance-YahooQuote
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Finance-YahooQuote/ChangeLog,v 1.12 2006/07/10 15:46:18 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Finance-YahooQuote/ChangeLog,v 1.13 2006/08/05 04:03:23 mcummings Exp $
+
+  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
+  Finance-YahooQuote-0.20.ebuild, Finance-YahooQuote-0.21.ebuild:
+  Adding perl dep; fixed DEPEND
 
   10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
   Finance-YahooQuote-0.21.ebuild:
